parser.out
Created by PLY version 3.11 (http://www.dabeaz.com/ply)

Grammar

Rule 0     S' -> programa
Rule 1     programa -> declaracoes principal
Rule 2     principal -> BEGIN comando lista_com END
Rule 3     declaracoes -> def_const def_tipos def_var def_func
Rule 4     def_const -> constante def_const
Rule 5     def_const -> empty
Rule 6     def_tipos -> tipo def_tipos
Rule 7     def_tipos -> empty
Rule 8     def_var -> variavel def_var
Rule 9     def_var -> empty
Rule 10    def_func -> funcao def_func
Rule 11    def_func -> empty
Rule 12    constante -> CONST ID = const_valor ;
Rule 13    const_valor -> CONST_VALOR
Rule 14    const_valor -> exp_mat
Rule 15    tipo -> TYPE ID = tipo_dado ;
Rule 16    variavel -> VAR ID lista_id : tipo_dado ;
Rule 17    lista_id -> , ID lista_id
Rule 18    lista_id -> empty
Rule 19    campos -> ID : tipo_dado lista_campos
Rule 20    lista_campos -> ; campos
Rule 21    lista_campos -> empty
Rule 22    tipo_dado -> INTEGER
Rule 23    tipo_dado -> REAL
Rule 24    tipo_dado -> ARRAY [ NUMERO ] OF tipo_dado
Rule 25    tipo_dado -> RECORD campos END
Rule 26    tipo_dado -> ID
Rule 27    funcao -> FUNCTION new_scope nome_funcao bloco_funcao
Rule 28    nome_funcao -> ID param_func : tipo_dado
Rule 29    param_func -> ( campos )
Rule 30    param_func -> empty
Rule 31    bloco_funcao -> def_var BEGIN comando lista_com END
Rule 32    lista_com -> ; comando lista_com
Rule 33    lista_com -> empty
Rule 34    bloco -> BEGIN comando lista_com END
Rule 35    bloco -> comando
Rule 36    comando -> ID nome ATRIBUICAO exp_mat
Rule 37    comando -> WHILE exp_logica bloco
Rule 38    comando -> IF exp_logica THEN bloco else
Rule 39    comando -> WRITE const_valor
Rule 40    comando -> READ ID nome
Rule 41    else -> ELSE bloco
Rule 42    else -> empty
Rule 43    lista_param -> parametro lista_param_aux
Rule 44    lista_param -> empty
Rule 45    lista_param_aux -> , lista_param
Rule 46    lista_param_aux -> empty
Rule 47    exp_logica -> exp_mat exp_logica_aux
Rule 48    exp_logica_aux -> op_logico exp_logica
Rule 49    exp_logica_aux -> empty
Rule 50    exp_mat -> parametro exp_mat_aux
Rule 51    exp_mat_aux -> OP_MAT exp_mat
Rule 52    exp_mat_aux -> empty
Rule 53    parametro -> ID nome
Rule 54    parametro -> NUMERO
Rule 55    op_logico -> <
Rule 56    op_logico -> >
Rule 57    op_logico -> =
Rule 58    op_logico -> !
Rule 59    nome -> . ID nome
Rule 60    nome -> [ parametro ]
Rule 61    nome -> ( lista_param )
Rule 62    nome -> empty
Rule 63    new_scope -> <empty>
Rule 64    empty -> <empty>

Terminals, with rules where they appear

!                    : 58
(                    : 29 61
)                    : 29 61
,                    : 17 45
.                    : 59
:                    : 16 19 28
;                    : 12 15 16 20 32
<                    : 55
=                    : 12 15 57
>                    : 56
ARRAY                : 24
ATRIBUICAO           : 36
BEGIN                : 2 31 34
CONST                : 12
CONST_VALOR          : 13
ELSE                 : 41
END                  : 2 25 31 34
FUNCTION             : 27
ID                   : 12 15 16 17 19 26 28 36 40 53 59
IF                   : 38
INTEGER              : 22
NUMERO               : 24 54
OF                   : 24
OP_MAT               : 51
READ                 : 40
REAL                 : 23
RECORD               : 25
THEN                 : 38
TYPE                 : 15
VAR                  : 16
WHILE                : 37
WRITE                : 39
[                    : 24 60
]                    : 24 60
error                : 

Nonterminals, with rules where they appear

bloco                : 37 38 41
bloco_funcao         : 27
campos               : 20 25 29
comando              : 2 31 32 34 35
const_valor          : 12 39
constante            : 4
declaracoes          : 1
def_const            : 3 4
def_func             : 3 10
def_tipos            : 3 6
def_var              : 3 8 31
else                 : 38
empty                : 5 7 9 11 18 21 30 33 42 44 46 49 52 62
exp_logica           : 37 38 48
exp_logica_aux       : 47
exp_mat              : 14 36 47 51
exp_mat_aux          : 50
funcao               : 10
lista_campos         : 19
lista_com            : 2 31 32 34
lista_id             : 16 17
lista_param          : 45 61
lista_param_aux      : 43
new_scope            : 27
nome                 : 36 40 53 59
nome_funcao          : 27
op_logico            : 48
param_func           : 28
parametro            : 43 50 60
principal            : 1
programa             : 0
tipo                 : 6
tipo_dado            : 15 16 19 24 28
variavel             : 8

Parsing method: LALR

state 0

    (0) S' -> . programa
    (1) programa -> . declaracoes principal
    (3) declaracoes -> . def_const def_tipos def_var def_func
    (4) def_const -> . constante def_const
    (5) def_const -> . empty
    (12) constante -> . CONST ID = const_valor ;
    (64) empty -> .

    CONST           shift and go to state 6
    TYPE            reduce using rule 64 (empty -> .)
    VAR             reduce using rule 64 (empty -> .)
    FUNCTION        reduce using rule 64 (empty -> .)
    BEGIN           reduce using rule 64 (empty -> .)

    programa                       shift and go to state 1
    declaracoes                    shift and go to state 2
    def_const                      shift and go to state 3
    constante                      shift and go to state 4
    empty                          shift and go to state 5

state 1

    (0) S' -> programa .



state 2

    (1) programa -> declaracoes . principal
    (2) principal -> . BEGIN comando lista_com END

    BEGIN           shift and go to state 8

    principal                      shift and go to state 7

state 3

    (3) declaracoes -> def_const . def_tipos def_var def_func
    (6) def_tipos -> . tipo def_tipos
    (7) def_tipos -> . empty
    (15) tipo -> . TYPE ID = tipo_dado ;
    (64) empty -> .

    TYPE            shift and go to state 12
    VAR             reduce using rule 64 (empty -> .)
    FUNCTION        reduce using rule 64 (empty -> .)
    BEGIN           reduce using rule 64 (empty -> .)

    def_tipos                      shift and go to state 9
    tipo                           shift and go to state 10
    empty                          shift and go to state 11

state 4

    (4) def_const -> constante . def_const
    (4) def_const -> . constante def_const
    (5) def_const -> . empty
    (12) constante -> . CONST ID = const_valor ;
    (64) empty -> .

    CONST           shift and go to state 6
    TYPE            reduce using rule 64 (empty -> .)
    VAR             reduce using rule 64 (empty -> .)
    FUNCTION        reduce using rule 64 (empty -> .)
    BEGIN           reduce using rule 64 (empty -> .)

    constante                      shift and go to state 4
    def_const                      shift and go to state 13
    empty                          shift and go to state 5

state 5

    (5) def_const -> empty .

    TYPE            reduce using rule 5 (def_const -> empty .)
    VAR             reduce using rule 5 (def_const -> empty .)
    FUNCTION        reduce using rule 5 (def_const -> empty .)
    BEGIN           reduce using rule 5 (def_const -> empty .)


state 6

    (12) constante -> CONST . ID = const_valor ;

    ID              shift and go to state 14


state 7

    (1) programa -> declaracoes principal .

    $end            reduce using rule 1 (programa -> declaracoes principal .)


state 8

    (2) principal -> BEGIN . comando lista_com END
    (36) comando -> . ID nome ATRIBUICAO exp_mat
    (37) comando -> . WHILE exp_logica bloco
    (38) comando -> . IF exp_logica THEN bloco else
    (39) comando -> . WRITE const_valor
    (40) comando -> . READ ID nome

    ID              shift and go to state 16
    WHILE           shift and go to state 17
    IF              shift and go to state 18
    WRITE           shift and go to state 19
    READ            shift and go to state 20

    comando                        shift and go to state 15

state 9

    (3) declaracoes -> def_const def_tipos . def_var def_func
    (8) def_var -> . variavel def_var
    (9) def_var -> . empty
    (16) variavel -> . VAR ID lista_id : tipo_dado ;
    (64) empty -> .

    VAR             shift and go to state 24
    FUNCTION        reduce using rule 64 (empty -> .)
    BEGIN           reduce using rule 64 (empty -> .)

    def_var                        shift and go to state 21
    variavel                       shift and go to state 22
    empty                          shift and go to state 23

state 10

    (6) def_tipos -> tipo . def_tipos
    (6) def_tipos -> . tipo def_tipos
    (7) def_tipos -> . empty
    (15) tipo -> . TYPE ID = tipo_dado ;
    (64) empty -> .

    TYPE            shift and go to state 12
    VAR             reduce using rule 64 (empty -> .)
    FUNCTION        reduce using rule 64 (empty -> .)
    BEGIN           reduce using rule 64 (empty -> .)

    tipo                           shift and go to state 10
    def_tipos                      shift and go to state 25
    empty                          shift and go to state 11

state 11

    (7) def_tipos -> empty .

    VAR             reduce using rule 7 (def_tipos -> empty .)
    FUNCTION        reduce using rule 7 (def_tipos -> empty .)
    BEGIN           reduce using rule 7 (def_tipos -> empty .)


state 12

    (15) tipo -> TYPE . ID = tipo_dado ;

    ID              shift and go to state 26


state 13

    (4) def_const -> constante def_const .

    TYPE            reduce using rule 4 (def_const -> constante def_const .)
    VAR             reduce using rule 4 (def_const -> constante def_const .)
    FUNCTION        reduce using rule 4 (def_const -> constante def_const .)
    BEGIN           reduce using rule 4 (def_const -> constante def_const .)


state 14

    (12) constante -> CONST ID . = const_valor ;

    =               shift and go to state 27


state 15

    (2) principal -> BEGIN comando . lista_com END
    (32) lista_com -> . ; comando lista_com
    (33) lista_com -> . empty
    (64) empty -> .

    ;               shift and go to state 29
    END             reduce using rule 64 (empty -> .)

    lista_com                      shift and go to state 28
    empty                          shift and go to state 30

state 16

    (36) comando -> ID . nome ATRIBUICAO exp_mat
    (59) nome -> . . ID nome
    (60) nome -> . [ parametro ]
    (61) nome -> . ( lista_param )
    (62) nome -> . empty
    (64) empty -> .

    .               shift and go to state 32
    [               shift and go to state 33
    (               shift and go to state 34
    ATRIBUICAO      reduce using rule 64 (empty -> .)

    nome                           shift and go to state 31
    empty                          shift and go to state 35

state 17

    (37) comando -> WHILE . exp_logica bloco
    (47) exp_logica -> . exp_mat exp_logica_aux
    (50) exp_mat -> . parametro exp_mat_aux
    (53) parametro -> . ID nome
    (54) parametro -> . NUMERO

    ID              shift and go to state 39
    NUMERO          shift and go to state 40

    exp_logica                     shift and go to state 36
    exp_mat                        shift and go to state 37
    parametro                      shift and go to state 38

state 18

    (38) comando -> IF . exp_logica THEN bloco else
    (47) exp_logica -> . exp_mat exp_logica_aux
    (50) exp_mat -> . parametro exp_mat_aux
    (53) parametro -> . ID nome
    (54) parametro -> . NUMERO

    ID              shift and go to state 39
    NUMERO          shift and go to state 40

    exp_logica                     shift and go to state 41
    exp_mat                        shift and go to state 37
    parametro                      shift and go to state 38

state 19

    (39) comando -> WRITE . const_valor
    (13) const_valor -> . CONST_VALOR
    (14) const_valor -> . exp_mat
    (50) exp_mat -> . parametro exp_mat_aux
    (53) parametro -> . ID nome
    (54) parametro -> . NUMERO

    CONST_VALOR     shift and go to state 43
    ID              shift and go to state 39
    NUMERO          shift and go to state 40

    const_valor                    shift and go to state 42
    exp_mat                        shift and go to state 44
    parametro                      shift and go to state 38

state 20

    (40) comando -> READ . ID nome

    ID              shift and go to state 45


state 21

    (3) declaracoes -> def_const def_tipos def_var . def_func
    (10) def_func -> . funcao def_func
    (11) def_func -> . empty
    (27) funcao -> . FUNCTION new_scope nome_funcao bloco_funcao
    (64) empty -> .

    FUNCTION        shift and go to state 49
    BEGIN           reduce using rule 64 (empty -> .)

    def_func                       shift and go to state 46
    funcao                         shift and go to state 47
    empty                          shift and go to state 48

state 22

    (8) def_var -> variavel . def_var
    (8) def_var -> . variavel def_var
    (9) def_var -> . empty
    (16) variavel -> . VAR ID lista_id : tipo_dado ;
    (64) empty -> .

    VAR             shift and go to state 24
    FUNCTION        reduce using rule 64 (empty -> .)
    BEGIN           reduce using rule 64 (empty -> .)

    variavel                       shift and go to state 22
    def_var                        shift and go to state 50
    empty                          shift and go to state 23

state 23

    (9) def_var -> empty .

    FUNCTION        reduce using rule 9 (def_var -> empty .)
    BEGIN           reduce using rule 9 (def_var -> empty .)


state 24

    (16) variavel -> VAR . ID lista_id : tipo_dado ;

    ID              shift and go to state 51


state 25

    (6) def_tipos -> tipo def_tipos .

    VAR             reduce using rule 6 (def_tipos -> tipo def_tipos .)
    FUNCTION        reduce using rule 6 (def_tipos -> tipo def_tipos .)
    BEGIN           reduce using rule 6 (def_tipos -> tipo def_tipos .)


state 26

    (15) tipo -> TYPE ID . = tipo_dado ;

    =               shift and go to state 52


state 27

    (12) constante -> CONST ID = . const_valor ;
    (13) const_valor -> . CONST_VALOR
    (14) const_valor -> . exp_mat
    (50) exp_mat -> . parametro exp_mat_aux
    (53) parametro -> . ID nome
    (54) parametro -> . NUMERO

    CONST_VALOR     shift and go to state 43
    ID              shift and go to state 39
    NUMERO          shift and go to state 40

    const_valor                    shift and go to state 53
    exp_mat                        shift and go to state 44
    parametro                      shift and go to state 38

state 28

    (2) principal -> BEGIN comando lista_com . END

    END             shift and go to state 54


state 29

    (32) lista_com -> ; . comando lista_com
    (36) comando -> . ID nome ATRIBUICAO exp_mat
    (37) comando -> . WHILE exp_logica bloco
    (38) comando -> . IF exp_logica THEN bloco else
    (39) comando -> . WRITE const_valor
    (40) comando -> . READ ID nome

    ID              shift and go to state 16
    WHILE           shift and go to state 17
    IF              shift and go to state 18
    WRITE           shift and go to state 19
    READ            shift and go to state 20

    comando                        shift and go to state 55

state 30

    (33) lista_com -> empty .

    END             reduce using rule 33 (lista_com -> empty .)


state 31

    (36) comando -> ID nome . ATRIBUICAO exp_mat

    ATRIBUICAO      shift and go to state 56


state 32

    (59) nome -> . . ID nome

    ID              shift and go to state 57


state 33

    (60) nome -> [ . parametro ]
    (53) parametro -> . ID nome
    (54) parametro -> . NUMERO

    ID              shift and go to state 39
    NUMERO          shift and go to state 40

    parametro                      shift and go to state 58

state 34

    (61) nome -> ( . lista_param )
    (43) lista_param -> . parametro lista_param_aux
    (44) lista_param -> . empty
    (53) parametro -> . ID nome
    (54) parametro -> . NUMERO
    (64) empty -> .

    ID              shift and go to state 39
    NUMERO          shift and go to state 40
    )               reduce using rule 64 (empty -> .)

    lista_param                    shift and go to state 59
    parametro                      shift and go to state 60
    empty                          shift and go to state 61

state 35

    (62) nome -> empty .

    ATRIBUICAO      reduce using rule 62 (nome -> empty .)
    OP_MAT          reduce using rule 62 (nome -> empty .)
    <               reduce using rule 62 (nome -> empty .)
    >               reduce using rule 62 (nome -> empty .)
    =               reduce using rule 62 (nome -> empty .)
    !               reduce using rule 62 (nome -> empty .)
    BEGIN           reduce using rule 62 (nome -> empty .)
    ID              reduce using rule 62 (nome -> empty .)
    WHILE           reduce using rule 62 (nome -> empty .)
    IF              reduce using rule 62 (nome -> empty .)
    WRITE           reduce using rule 62 (nome -> empty .)
    READ            reduce using rule 62 (nome -> empty .)
    THEN            reduce using rule 62 (nome -> empty .)
    ;               reduce using rule 62 (nome -> empty .)
    END             reduce using rule 62 (nome -> empty .)
    ELSE            reduce using rule 62 (nome -> empty .)
    ]               reduce using rule 62 (nome -> empty .)
    ,               reduce using rule 62 (nome -> empty .)
    )               reduce using rule 62 (nome -> empty .)


state 36

    (37) comando -> WHILE exp_logica . bloco
    (34) bloco -> . BEGIN comando lista_com END
    (35) bloco -> . comando
    (36) comando -> . ID nome ATRIBUICAO exp_mat
    (37) comando -> . WHILE exp_logica bloco
    (38) comando -> . IF exp_logica THEN bloco else
    (39) comando -> . WRITE const_valor
    (40) comando -> . READ ID nome

    BEGIN           shift and go to state 63
    ID              shift and go to state 16
    WHILE           shift and go to state 17
    IF              shift and go to state 18
    WRITE           shift and go to state 19
    READ            shift and go to state 20

    bloco                          shift and go to state 62
    comando                        shift and go to state 64

state 37

    (47) exp_logica -> exp_mat . exp_logica_aux
    (48) exp_logica_aux -> . op_logico exp_logica
    (49) exp_logica_aux -> . empty
    (55) op_logico -> . <
    (56) op_logico -> . >
    (57) op_logico -> . =
    (58) op_logico -> . !
    (64) empty -> .

    <               shift and go to state 68
    >               shift and go to state 69
    =               shift and go to state 70
    !               shift and go to state 71
    BEGIN           reduce using rule 64 (empty -> .)
    ID              reduce using rule 64 (empty -> .)
    WHILE           reduce using rule 64 (empty -> .)
    IF              reduce using rule 64 (empty -> .)
    WRITE           reduce using rule 64 (empty -> .)
    READ            reduce using rule 64 (empty -> .)
    THEN            reduce using rule 64 (empty -> .)

    exp_logica_aux                 shift and go to state 65
    op_logico                      shift and go to state 66
    empty                          shift and go to state 67

state 38

    (50) exp_mat -> parametro . exp_mat_aux
    (51) exp_mat_aux -> . OP_MAT exp_mat
    (52) exp_mat_aux -> . empty
    (64) empty -> .

    OP_MAT          shift and go to state 73
    <               reduce using rule 64 (empty -> .)
    >               reduce using rule 64 (empty -> .)
    =               reduce using rule 64 (empty -> .)
    !               reduce using rule 64 (empty -> .)
    BEGIN           reduce using rule 64 (empty -> .)
    ID              reduce using rule 64 (empty -> .)
    WHILE           reduce using rule 64 (empty -> .)
    IF              reduce using rule 64 (empty -> .)
    WRITE           reduce using rule 64 (empty -> .)
    READ            reduce using rule 64 (empty -> .)
    THEN            reduce using rule 64 (empty -> .)
    ;               reduce using rule 64 (empty -> .)
    END             reduce using rule 64 (empty -> .)
    ELSE            reduce using rule 64 (empty -> .)

    exp_mat_aux                    shift and go to state 72
    empty                          shift and go to state 74

state 39

    (53) parametro -> ID . nome
    (59) nome -> . . ID nome
    (60) nome -> . [ parametro ]
    (61) nome -> . ( lista_param )
    (62) nome -> . empty
    (64) empty -> .

    .               shift and go to state 32
    [               shift and go to state 33
    (               shift and go to state 34
    OP_MAT          reduce using rule 64 (empty -> .)
    <               reduce using rule 64 (empty -> .)
    >               reduce using rule 64 (empty -> .)
    =               reduce using rule 64 (empty -> .)
    !               reduce using rule 64 (empty -> .)
    BEGIN           reduce using rule 64 (empty -> .)
    ID              reduce using rule 64 (empty -> .)
    WHILE           reduce using rule 64 (empty -> .)
    IF              reduce using rule 64 (empty -> .)
    WRITE           reduce using rule 64 (empty -> .)
    READ            reduce using rule 64 (empty -> .)
    THEN            reduce using rule 64 (empty -> .)
    ;               reduce using rule 64 (empty -> .)
    END             reduce using rule 64 (empty -> .)
    ELSE            reduce using rule 64 (empty -> .)
    ]               reduce using rule 64 (empty -> .)
    ,               reduce using rule 64 (empty -> .)
    )               reduce using rule 64 (empty -> .)

    nome                           shift and go to state 75
    empty                          shift and go to state 35

state 40

    (54) parametro -> NUMERO .

    OP_MAT          reduce using rule 54 (parametro -> NUMERO .)
    <               reduce using rule 54 (parametro -> NUMERO .)
    >               reduce using rule 54 (parametro -> NUMERO .)
    =               reduce using rule 54 (parametro -> NUMERO .)
    !               reduce using rule 54 (parametro -> NUMERO .)
    BEGIN           reduce using rule 54 (parametro -> NUMERO .)
    ID              reduce using rule 54 (parametro -> NUMERO .)
    WHILE           reduce using rule 54 (parametro -> NUMERO .)
    IF              reduce using rule 54 (parametro -> NUMERO .)
    WRITE           reduce using rule 54 (parametro -> NUMERO .)
    READ            reduce using rule 54 (parametro -> NUMERO .)
    THEN            reduce using rule 54 (parametro -> NUMERO .)
    ;               reduce using rule 54 (parametro -> NUMERO .)
    END             reduce using rule 54 (parametro -> NUMERO .)
    ELSE            reduce using rule 54 (parametro -> NUMERO .)
    ]               reduce using rule 54 (parametro -> NUMERO .)
    ,               reduce using rule 54 (parametro -> NUMERO .)
    )               reduce using rule 54 (parametro -> NUMERO .)


state 41

    (38) comando -> IF exp_logica . THEN bloco else

    THEN            shift and go to state 76


state 42

    (39) comando -> WRITE const_valor .

    ;               reduce using rule 39 (comando -> WRITE const_valor .)
    END             reduce using rule 39 (comando -> WRITE const_valor .)
    ELSE            reduce using rule 39 (comando -> WRITE const_valor .)


state 43

    (13) const_valor -> CONST_VALOR .

    ;               reduce using rule 13 (const_valor -> CONST_VALOR .)
    END             reduce using rule 13 (const_valor -> CONST_VALOR .)
    ELSE            reduce using rule 13 (const_valor -> CONST_VALOR .)


state 44

    (14) const_valor -> exp_mat .

    ;               reduce using rule 14 (const_valor -> exp_mat .)
    END             reduce using rule 14 (const_valor -> exp_mat .)
    ELSE            reduce using rule 14 (const_valor -> exp_mat .)


state 45

    (40) comando -> READ ID . nome
    (59) nome -> . . ID nome
    (60) nome -> . [ parametro ]
    (61) nome -> . ( lista_param )
    (62) nome -> . empty
    (64) empty -> .

    .               shift and go to state 32
    [               shift and go to state 33
    (               shift and go to state 34
    ;               reduce using rule 64 (empty -> .)
    END             reduce using rule 64 (empty -> .)
    ELSE            reduce using rule 64 (empty -> .)

    nome                           shift and go to state 77
    empty                          shift and go to state 35

state 46

    (3) declaracoes -> def_const def_tipos def_var def_func .

    BEGIN           reduce using rule 3 (declaracoes -> def_const def_tipos def_var def_func .)


state 47

    (10) def_func -> funcao . def_func
    (10) def_func -> . funcao def_func
    (11) def_func -> . empty
    (27) funcao -> . FUNCTION new_scope nome_funcao bloco_funcao
    (64) empty -> .

    FUNCTION        shift and go to state 49
    BEGIN           reduce using rule 64 (empty -> .)

    funcao                         shift and go to state 47
    def_func                       shift and go to state 78
    empty                          shift and go to state 48

state 48

    (11) def_func -> empty .

    BEGIN           reduce using rule 11 (def_func -> empty .)


state 49

    (27) funcao -> FUNCTION . new_scope nome_funcao bloco_funcao
    (63) new_scope -> .

    ID              reduce using rule 63 (new_scope -> .)

    new_scope                      shift and go to state 79

state 50

    (8) def_var -> variavel def_var .

    FUNCTION        reduce using rule 8 (def_var -> variavel def_var .)
    BEGIN           reduce using rule 8 (def_var -> variavel def_var .)


state 51

    (16) variavel -> VAR ID . lista_id : tipo_dado ;
    (17) lista_id -> . , ID lista_id
    (18) lista_id -> . empty
    (64) empty -> .

    ,               shift and go to state 81
    :               reduce using rule 64 (empty -> .)

    lista_id                       shift and go to state 80
    empty                          shift and go to state 82

state 52

    (15) tipo -> TYPE ID = . tipo_dado ;
    (22) tipo_dado -> . INTEGER
    (23) tipo_dado -> . REAL
    (24) tipo_dado -> . ARRAY [ NUMERO ] OF tipo_dado
    (25) tipo_dado -> . RECORD campos END
    (26) tipo_dado -> . ID

    INTEGER         shift and go to state 85
    REAL            shift and go to state 86
    ARRAY           shift and go to state 87
    RECORD          shift and go to state 88
    ID              shift and go to state 83

    tipo_dado                      shift and go to state 84

state 53

    (12) constante -> CONST ID = const_valor . ;

    ;               shift and go to state 89


state 54

    (2) principal -> BEGIN comando lista_com END .

    $end            reduce using rule 2 (principal -> BEGIN comando lista_com END .)


state 55

    (32) lista_com -> ; comando . lista_com
    (32) lista_com -> . ; comando lista_com
    (33) lista_com -> . empty
    (64) empty -> .

    ;               shift and go to state 29
    END             reduce using rule 64 (empty -> .)

    lista_com                      shift and go to state 90
    empty                          shift and go to state 30

state 56

    (36) comando -> ID nome ATRIBUICAO . exp_mat
    (50) exp_mat -> . parametro exp_mat_aux
    (53) parametro -> . ID nome
    (54) parametro -> . NUMERO

    ID              shift and go to state 39
    NUMERO          shift and go to state 40

    exp_mat                        shift and go to state 91
    parametro                      shift and go to state 38

state 57

    (59) nome -> . ID . nome
    (59) nome -> . . ID nome
    (60) nome -> . [ parametro ]
    (61) nome -> . ( lista_param )
    (62) nome -> . empty
    (64) empty -> .
